--- a/index.html
+++ b/index.html
@@ -1101,6 +1101,6 @@ div.code-tooltip-content {
 <link rel="icon" type="image/x-icon" href="https://p.sda1.dev/10/bf5eafa4abd46d72ffd6077404b789d0/1.png">
 </head>
 <body class='typora-export os-windows'><div class='typora-export-content'>
-<div id='write'  class=''><div align="center"><img src="https://p.sda1.dev/10/bf5eafa4abd46d72ffd6077404b789d0/1.png"></div><h1 id='kareudon'><span>KareUdon</span></h1><blockquote><p><span>KareUdon, a Z-aN Live stream &amp; archive downloader</span></p></blockquote><p><span>  </span></p><p><img src="https://p.sda1.dev/10/dd4025eb128fc24bdc07899a0ccda361/Snipaste_2023-03-21_23-44-37.png" referrerpolicy="no-referrer"></p><hr /><p><span>Powered by ShiSheng with ❤</span></p></div></div>
+<div id='write'  class=''><div align="center"><img src="https://p.sda1.dev/10/bf5eafa4abd46d72ffd6077404b789d0/1.png"></div><h1 id='kareudon'><span>KareUdon</span></h1><blockquote><p><span>KareUdon, a Z-aN Live stream &amp; archive downloader</span></p></blockquote><p>&nbsp;</p><p><strong><font color=red><span>Internal Beta Testing</span></font></strong></p><p>&nbsp;</p><p><img src="https://p.sda1.dev/10/dd4025eb128fc24bdc07899a0ccda361/Snipaste_2023-03-21_23-44-37.png" referrerpolicy="no-referrer"></p><hr /><p><span>Powered by ShiSheng with ❤</span></p><p>&nbsp;</p></div></div>
 </body>
 </html>
